--- a/perfilando.html
+++ b/perfilando.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="logo.png" alt="logoadictas"/>
+            <img src="logoadictas.jpg" alt="logoadictas"/>
         </div>
         <div class="social-links">
           <a href="https://www.facebook.com/perfil" target="_blank">
@@ -37,6 +37,14 @@
                 <li> <a href="#Servicios">Servicios </a></li>
                 <li> <a href="#Contactos">Contactos </a></li>
                 <li> <a href="#Nuestrahistoria">Historia </a></li>
+            </ul>
+        </nav>
+        <nav>
+            <ul>
+              <div class="contenedor-busqueda">
+                <input type="text" id="Busqueda" placeholder="Buscar...">
+                <button id="boton-busqueda">Buscar</button>
+              </div>
             </ul>
         </nav>
       </header> 
