--- a/proyectowidi.html
+++ b/proyectowidi.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="logo.png" alt="logoadictas"/>
+            <img src="logoadictas.jpg" alt="logoadictas"/>
         </div>
         <div class="contenedor-busqueda">
             <input type="text" id="Busqueda" placeholder="Buscar...">
