--- a/index.html
+++ b/index.html
@@ -36,6 +36,35 @@
       </section>
 
     </header> 
+
+    <section class="aaa">
+      <h2>Servicios</h2>
+
+  </section>
+  <section id="servicio" class="servicios">
+      <div class="secciones">
+          <img src="pestañas.jpg" alt="foto de pestañas">
+          <h3>Pestañas</h3>
+          <p>ofrecemos servicios de pestañas (extenciones y arqueamiento)</p>
+      </div>
+      <div class="secciones">
+          <img src="maniquiur.jpg" alt="foto de manos">
+          <h3>Manicuria</h3>
+          <p>servicios de manicuria</p>
+      </div>
+      <div class="secciones">
+          <img src="maquillaje.jpg" alt="foto de maquillaje">
+           <h3>Maquillaje</h3>
+           <p> ofrecemos maquillaje para eventos especiales</p>
+      </div>
+      <div class="secciones">
+          <img src="depilacion.jpg" alt="foto de">
+          <h3>Depilacion</h3>
+          <p> Tambien ofrecemos depilacion unicamente de rostro</p>
+      </div>
+  </section>
+
+
       
       <section id="Inicio" class="inicio">
 
