agregandole estilos a las secciones

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <h2>Servicios</h2>
 
   </section>
-  <section id="servicio" class="servicios">
+  <section id="servicio" class="serv">
       <div class="secciones">
           <img src="pestañas.jpg" alt="foto de pestañas">
           <h3>Pestañas</h3>
